--- a/index.html
+++ b/index.html
@@ -6,37 +6,37 @@
     <meta name="viewport" content="width=device-width">
     <title>Features | Nome do site</title>
     <link rel="stylesheet" href="reset.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <body>
         <main>
             <h2>Entrega eficiente e de confiança</h2>
-            <h2>Powered by Technology</h2>
-            <p>Nossa Inteligência Artificial alimentada por ferramentas que utilizam milhões de dados para garantir que seu projeto seja bem-sucedido</p>
-            <section>
-                <ul>
-                    <li>
+            <h2 class="subtitulo">Powered by Technology</h2>
+            <p>Nossa Inteligência Artificial alimentada por ferramentas que utilizam milhões<br/>de dados para garantir que seu projeto seja bem-sucedido</p>
+            <section class="cards">
+                    <div class="supervisor">
                         <h6>Supervisor</h6>
                         <p>Monitora as atividades para identificar problemas no projeto</p>
                         <img src="icon-supervisor.svg" alt="Imagem do Supervisor">
-                    </li>
-                    <li>
+                    </div>
+                    <div class="construtor-de-equipes">
                         <h6>Construtor de equipes</h6>
                         <p>Analisa nossa network de talentos para criar a equipe ideal para o seu projeto</p>
                         <img src="icon-team-builder.svg" alt="Imagem do Construtor de Equipes">
-                    </li>
-                    <li>
+                    </div>
+                    <div class="karma">
                         <h6>Karma</h6>
                         <p>Avaliação regular de nossos talentos para garantir qualidade</p>
                         <img src="icon-karma.svg" alt="Imagem do Karma">
-                    </li>
-                    <li>
+                    </div>
+                    <div class="calculadora">
                         <h6>Calculadora</h6>
                         <p>Usa dados de projetos passados para fornecer melhores prazos de entrega</p>
                         <img src="icon-calculator.svg" alt="Imagem da Calculadora">
-                    </li>
-                </ul>
+                    </div>
             </section>
         </main>
     </body>
